// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writer correctly email files create email with: [engine: NO, suffix: html, locale: en] 1`] = `
"<mjml>
  <mj-body>
    <mj-section>
      <mj-column>
        <mj-text>test</mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`writer correctly email files create email with: [engine: eta, suffix: html, locale: en] 1`] = `
"<mjml>
  <mj-body>
    <mj-section>
      <mj-column>
        <mj-text>hello en</mj-text>
        <mj-text>this is programmatly partial</mj-text>
        <mj-text>age 32</mj-text>
        <mj-text>this is file partial</mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`writer correctly email files create email with: [engine: handlebars, suffix: html, locale: en] 1`] = `
"<mjml>
  <mj-body>
    <mj-section>
      <mj-column>
        <mj-text>hello diego tonini has age 12</mj-text>
        <mj-text>partial with diego tonini</mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`writer correctly email files create text version email 1`] = `"only text version"`;
